Aspect Core and Extract refined edges and inner glow

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,18 @@
 **/original_backup/**
 **/backup/**
 **/backup_02/**
+**/backup_02_green/**
 **/backup_03/**
+**/backup_03_blue/**
 **/rename_01/**
 **/rename_02/**
 **/rename_03/**
 **/export/**
 **/removed/**
+**/dupes/**
+**/psd/**
+**/maybe/**
+**/rocks/**
 **/ENV_LandTEST_TEX/**
 **/ENV_Land_M_Test/**
 *Thumbs.db
