DarkScrolls ui added

--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,16 @@
 **/removed/**
 **/dupes/**
 **/psd/**
+**/ref/**
 **/maybe/**
 **/rocks/**
 **/ENV_LandTEST_TEX/**
 **/ENV_Land_M_Test/**
+**/UI_EquipSlots/**
+**/UI_Landfall/**
+**/UI_MartialArts/**
+**/Z_ZBackup/**
+*GUMP_00_OTHER.txt
 *Thumbs.db
-*.mp4
-*.fbx
 *.exr
 *.mantra_checkpoint
