--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,6 @@
 **/Z_Tools/GumpOverrides**
 **/UI_Profession/**
 **/UI_DEBUG/**
-**/UI_MagicSpells_Upscale/*.psd
-**/UI_SpellsNecromancy_Upscale/*.psd
-**/UI_SpellsChivalry_Upscale/*.psd
 **/Upscale/*.psd
+**/UI_MagicSpells/Upscale/upscale/**
+**/UI_MagicSpells/Upscale/small/**
