TOOL install creates virtual environment , TOOL project variables added to frontmatter of all tools , beginning of refactor

--- a/Z_Tools/requirements.txt
+++ b/Z_Tools/requirements.txt
@@ -1,13 +1,5 @@
-pillow
-glob
-re
-numpy
-colorsys
-random
-blend_modes
-pathlib
-psd-tools
-tqdm
-contextlib
-warnings
-tkinter
+pillow>=10.0.0
+numpy>=1.24.0
+psd-tools>=1.9.0
+blend_modes>=2.1.0
+tqdm>=4.65.0
